fix(client/rtl): select arrow in wrong position

--- a/apps/client/src/stylesheets/theme-next/forms.css
+++ b/apps/client/src/stylesheets/theme-next/forms.css
@@ -358,10 +358,17 @@ select.form-control,
     outline: 3px solid transparent;
     outline-offset: 6px;
     padding-inline-end: calc(15px + 1.5rem);
-    background: var(--input-background-color) var(--dropdown-arrow);
+    background: var(--input-background-color) var(--dropdown-arrow);;
     color: var(--input-text-color);
     border: unset;
     border-radius: 0.375rem;
+}
+
+body[dir=rtl] select,
+body[dir=rtl] select.form-select,
+body[dir=rtl] select.form-control,
+body[dir=rtl] .select-button.dropdown-toggle.btn {
+    background-position: left 0.75rem center;
 }
 
 select:hover,
